<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transform_rviz_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mamueluth@gmail.com">Manuel M.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>libqt5-widgets</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz_common plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>